--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,10 +11,12 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 find_package(CUDA REQUIRED)
 find_package(SDL2 REQUIRED)
 
+file(GLOB_RECURSE SOURCE_FILES
+  ${CMAKE_SOURCE_DIR}/src/*.c
+  ${CMAKE_SOURCE_DIR}/src/*.cpp
+  ${CMAKE_SOURCE_DIR}/src/*.cu)
 
-add_executable(${PROJECT_NAME} src/main.cu src/frontend/window.cpp
-  src/kernels/chapter_3_kernel.cu
-  src/frontend/texturegpu.cu)
+add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${SDL2_INCLUDE_DIRS}
   "${CMAKE_SOURCE_DIR}/src/")
