--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,16 +10,19 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 
 find_package(CUDA REQUIRED)
 find_package(SDL2 REQUIRED)
+find_package(glfw3 REQUIRED)
 
 file(GLOB_RECURSE SOURCE_FILES
   ${CMAKE_SOURCE_DIR}/src/*.c
   ${CMAKE_SOURCE_DIR}/src/*.cpp
-  ${CMAKE_SOURCE_DIR}/src/*.cu)
+  ${CMAKE_SOURCE_DIR}/src/*.cu
+  ${CMAKE_SOURCE_DIR}/imgui/*.cpp)
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${SDL2_INCLUDE_DIRS}
-  "${CMAKE_SOURCE_DIR}/src/")
+  "${CMAKE_SOURCE_DIR}/src/"
+  "${CMAKE_SOURCE_DIR}/imgui/")
 target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
